<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/incoming_call"
    tools:context="com.example.asim.fakecall.MainActivity">


    <EditText
        android:id="@+id/fakename"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingLeft="10dp"
        android:hint="@string/fake_name"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="#f9f4f4"
        android:background="@drawable/textfield_radius"
        android:textColorHint="#ffffff">
    </EditText>

    <EditText
        android:id="@+id/fakenumber"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/fakename"
        android:layout_below="@+id/fakename"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/fake_number"
        android:layout_marginRight="10dp"
        android:paddingLeft="10dp"
        android:inputType="phone"
        android:textColor="#fbf6f6"
        android:background="@drawable/textfield_radius"
        android:textColorHint="#fdfafa" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fakenumber"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:contentDescription="@null"
        />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="22dp"
        android:checkedButton="@+id/radio1"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:textColor="#ffffff"
            android:text="@string/thirtysecs" />

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:text="@string/onemin" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:text="@string/fivemins" />
    </RadioGroup>

    <Button
        android:id="@+id/fakecalls"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@+id/radioGroup1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textSize="36sp"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:background="@mipmap/fakebutton"
        android:text="@string/make_call" />






</RelativeLayout>
